2006-08-03  Scott Lembcke <lemb0029@gnome.org>

        * gimp-lib/gimp.rb: Now sets $KCODE to UTF8. Removed rubyfu.rb from list
          of loaded modules.
          
        * gimp-lib/rubyfu.rb: Now loads gimp.rb as a dependency. Creates and END
          block to automatically call RubyFu.main. Added conversion to object
          types for procedure arguments.
          
        * gimp-lib/gimp_oo.rb: Added a Gimp::Param#transform method to convert
          parameters to object types if possible.
          
        * gimp-lib/pdb.rb: Added a call to Gimp::Param#transform on return
          values if possible.
          
        * plug-ins/*.rb: Updated to reflect changes in gimp-lib.
        
        * ext/Makefile.am: Added DLOCALEDIR to AM_CFLAGS.
        
        * ext/rbgimpdialog.c: Added gettext() calls.
        
        * ext/rbgimpmain.c: Added Gettext initialization calls.

2006-07-28  Scott Lembcke <lemb0029@gnome.org>

        * Added plug-ins/irbconsole.rb.
        
        * plug-ins/Makefile.am: Added irbconsole.rb to the plugins list.
        
2006-07-28  Kevin Cozens  <kcozens@cvs.gnome.org>

	* configure.in: Changed minor version to an odd number (unstable
	version). Added macros that use the minor version number to set
	GIMPRUBY_UNSTABLE properly.

2006-07-28  Scott Lembcke <lemb0029@gnome.org>

        * gimp-lib/gimp_oo.rb: Added the Drawable class and made Layer and
          Channel inherit from it.
          
        * gimp-lib/pdb.rb: Changed the PDBException to inherit from
          RuntimeException.

2006-07-21  Kevin Cozens  <kcozens@cvs.gnome.org>

	* ext/rbgimp.h
	* ext/conversion.c: Added newline at end of file to quiet compiler.

	* plug-ins/coolmetal-logo.rb.c: Use ParamDef.FONT instead of
	ParamDef.STRING to specify the default font to be used.

2006-07-21  Scott Lembcke <lemb0029@gnome.org>

        * gimp-lib/rubyfu.rb: Removed some unnecesary code. Clicking 'cancel' in